# flareon2022

./: README.md
task10/flag_decoder/: CMakeLists.txt  main.cpp
task11/: 11  11.py
task4/: decoder.cpp
task5/decoder/: CMakeLists.txt  base64.cpp  main.cpp  main.cpp.bak  md5.cpp  md5.h  rc4.cpp  rc4.h
task5/http_obj/: 1  2  3  4
task6/loader/: CMakeLists.txt  main.cpp  main.cpp.bak
task7/: anode.js  carrier.html  carrier_rev.html  my_random.js  task.js  task2.js  task_rev.js  valid_states.js
task7/parser/: CMakeLists.txt  CMakeLists.txt.bak  clean_not_followed.cpp  clean_not_followed.h  clean_rand_values.cpp  clean_rand_values.h  main.cpp  rewrite_states.cpp  rewrite_states.h  string_util.cpp  string_util.h
task7/tables/: AA_states.txt  AA_states_numbered.txt  states.txt
task8/: all_tokens.txt  commands_order.txt  dnspy_watchpoints.txt  domains_list.txt  file_offsets.txt  notes.cs  snippet_ip_decoder.cs
task8/FlareOn.Backdoor_deobfuscated/FlareOn.Backdoor/: FLARE01.cs  FLARE02.cs  FLARE03.cs  FLARE04.cs  FLARE05.cs  FLARE06.cs  FLARE07.cs  FLARE08.cs  FLARE09.cs  FLARE10.cs  FLARE11.cs  FLARE12.cs  FLARE13.cs  FLARE14.cs  FLARE15.cs  FlareOn.Backdoor.csproj  Program.cs
task8/FlareOn.Backdoor_dobfuscated_cleaned/: FlareOn.Backdoor.sln
task8/FlareOn.Backdoor_dobfuscated_cleaned/FlareOn.Backdoor/: Cmd.cs  Config.cs  DnsClass.cs  Enums.cs  FLARE01.cs  FLARE04.cs  FLARE09.cs  (+10 more)
task8/code/: ConsoleApp1.csproj  FLARE09.cs  FLARE12.cs  FLARE15.cs  Program.cs
task8/hooking_dll/: CMakeLists.txt  main.cpp
task9/: SuspiciousFile.txt  analyzed_code.cpp  hexrev.cpp  loader.cpp
(+2 files in other folders)
